--- a/basketball/templates/about.html
+++ b/basketball/templates/about.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>MTX Hackolympics-2.0</title>
+        <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
         <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">  
         <script src="{% static 'js/bootstrap.min.js' %}"></script>
 
@@ -16,8 +17,9 @@
             body {
             text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
             box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
-            background-image: url( "{% static 'images/background_3.svg' %}" );
+            background-image: url( "{% static 'images/background_about.svg' %}" );
             background-repeat: no-repeat;
+            background-size: 100% 100%;
             }
 
             .cover-container {
@@ -83,23 +85,28 @@
         <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
           <header class="mb-auto">
             <div>
-              <h3 class="float-md-start mb-0" style="color:#536DFE;">SKYNET</h3>
+              <h3 class="float-md-start mb-0">SKYNET</h3>
               <nav class="nav nav-masthead justify-content-center float-md-end">
-                <a class="nav-link" href="/skynet/home">Home</a>
+                <a class="nav-link" href="/">Home</a>
                 <a class="nav-link" href="/skynet/features">Features</a>
                 <a class="nav-link active" aria-current="page" href="/skynet/about">About Us</a>
               </nav>
             </div>
           </header>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
           <div class="row">
             <div class="col-lg-4">
-              <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-      
+              <img class="bd-placeholder-img rounded-circle" src = "{% static 'images/sanchit.jpeg' %}" width="140" height="140">
               <h2>Sanchit Gupta</h2>
               <p>CSE undergraduate, IIT Madras</p>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
-              <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
+              <img class="bd-placeholder-img rounded-circle" src = "{% static 'images/kamal.jpeg' %}" width="140" height="140">
       
               <h2>Jaya Kamal Maddula</h2>
               <p>CSE undergraduate, IIT Madras</p>
