--- a/basketball/templates/features.html
+++ b/basketball/templates/features.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>MTX Hackolympics-2.0</title>
+        <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
         <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">  
         <script src="{% static 'js/bootstrap.min.js' %}"></script>
         <script src="{% static 'scripts/jquery-3.6.0.js' %}"></script>
@@ -84,17 +85,12 @@
             <div>
               <h3 class="float-md-start mb-0">SKYNET</h3>
               <nav class="nav nav-masthead justify-content-center float-md-end">
-                <a class="nav-link" href="/skynet/home">Home</a>
+                <a class="nav-link" href="/">Home</a>
                 <a class="nav-link active" aria-current="page" href="/skynet/features">Features</a>
                 <a class="nav-link" href="/skynet/about">About Us</a>
               </nav>
             </div>
           </header>
-
-          <!-- <div class="input-group mb-3">
-            <input type="file" class="form-control" id="input">
-            <label class="input-group-text" for="inputGroupFile02">Upload</label>
-          </div> -->
           <div class="input-group mb-3" id="inputBox">
             <input type="file" class="form-control" id="input">
             <label class="input-group-text" for="inputGroupFile02">
@@ -120,11 +116,7 @@
               </div>
             </div>
           </div><br>    
-
-          <!-- <img src="..." class="rounded mx-auto d-block" alt="..."> -->
           <img src="{% static 'scripts/example.png' %}" width="600" height="400" id="statImg" style="display: none;">
-
-          <!--<div><a id="submitFile" class="btn btn-primary btn-lg">Get Score</a></div>-->
           
           <footer class="mt-auto text-white-50 footer">
             <p>Submission for <a class="text-white" style="text-decoration: none;">MTX Hackolympics-2.0</a> by <a class="text-white" style="text-decoration: none;">Team SKYNET</a>.</p>
