--- a/basketball/templates/index.html
+++ b/basketball/templates/index.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>MTX Hackolympics-2.0</title>
+        <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
         <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">  
         <script src="{% static 'js/bootstrap.min.js' %}"></script>
 
@@ -70,7 +71,6 @@
 
             .side-text {
               position: relative;
-              left: -10em;
               vertical-align: middle;
             }
 
@@ -175,7 +175,7 @@
             <div>
               <h3 class="float-md-start mb-0">SKYNET</h3>
               <nav class="nav nav-masthead justify-content-center float-md-end">
-                <a class="nav-link active" aria-current="page" href="/skynet/home">Home</a>
+                <a class="nav-link active" aria-current="page" href="/">Home</a>
                 <a class="nav-link" href="/skynet/features">Features</a>
                 <a class="nav-link" href="/skynet/about">About Us</a>
               </nav>
@@ -195,7 +195,7 @@
             <div class="card-body">
             <h5 class="card-title">Basketball Point Detection</h5>
             <p class="card-text">A webapp to detect scoring even in basketball video clip</p>
-            <a href="#" class="btn btn-danger btn-lg">Get Started</a></div>
+            <a href="/skynet/features" class="btn btn-danger btn-lg">Get Started</a></div>
           </div>
 
           <footer class="mt-auto text-white-50 footer">
