--- a/basketball/templates/about.html
+++ b/basketball/templates/about.html
@@ -112,8 +112,7 @@
               <p>CSE undergraduate, IIT Madras</p>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
-              <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-      
+              <img class="bd-placeholder-img rounded-circle" src = "{% static 'images/kaustubh.jpg' %}" width="140" height="140">      
               <h2>Kaustubh Miglani</h2>
               <p>CSE undergraduate, IIT Madras</p>
             </div><!-- /.col-lg-4 -->
